# AutoReduce

./: .coveragerc  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  lint.yml  pypi-deploy.yml  test.yml
autoreduce/: __init__.py  model_reduction.py
autoreduce/reductions/: __init__.py  abundance.py  conservation.py  timescale.py
autoreduce/reductions/projection/: __init__.py  dmd.py
autoreduce/solvers/: __init__.py  ode.py  ssm.py
autoreduce/system/: __init__.py  control.py  system.py
autoreduce/utils/: __init__.py  converters.py  reduction.py  sbml.py
docs/: conf.py  contributing.rst  develop.rst  examples.rst  generate_library_docs.py  index.rst  installation.rst  introduction.rst  library.rst  reductions.rst  requirements.txt  solvers.rst  systems.rst  usage.rst
docs/_static/css/: custom.css
docs/notebooks/: biocrnpyler_interface.nblink  gene_expression_analysis.nblink  michaelis_menten.nblink  parameter_sensitivity.nblink  sir_model_reduction.nblink
examples/: Induction_motor_speed_control_autoreduce.ipynb  ProteinExpression6var.ipynb  ProteinExpressionExample.ipynb  SEIRVD_Model_Example.ipynb  SEIR_Model_Example.ipynb  compute_jacobian.ipynb  michaelis-menten example-Copy1.ipynb
examples/biological/: Bacterial population control.ipynb  BioCRNPyler interface.ipynb  Gene expression robustness analysis.ipynb  Gene expression.ipynb  SEIRVD_Model_Example.ipynb  Toggle switch.ipynb  Two member population control.ipynb
examples/biological/models/: biocrnpyler_gene_expression.xml  example_1.xml
examples/canonical/: Michaelis-Menten.ipynb  Parameter sensitivity.ipynb
examples/ecological/: Viral spread.ipynb
tests/: README.md  conftest.py  test_auto_reduce.py  test_jupyter_notebooks.py  test_objects.py  test_ode.py  test_optional_integrations.py  test_system.py  test_time_scale_separation.py
